<resources>
    <string name="app_name">Exercise 04</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_title">Here are all the fragments:</string>
    <string name="header_icon_alt">Header drawer icon</string>
    <string name="menuC">Main fragment</string>
    <string name="menuL">Swipe fragment</string>
    <string name="menuR">List fragment</string>


    <string name="fragmentAddItem">Add new player:</string>
    <string name="fragmentShow">Fragment showing data</string>
    <string name="commonButton">Go</string>
    <string name="td">TODO</string>
    <string name="op1">Option 1</string>
    <string name="op2">Option 2</string>
    <string name="results">Here data/results</string>
    <string name="fragmentMain">Welcome!</string>
    <string name="fragmentSwipe">Fragment with tabs</string>
    <string name="fragmentList">Fragment with list</string>
    <string name="fragmentTab1">Fragment with tab2</string>
    <string name="fragmentTab2">Fragment with tab1</string>
    <string name="fragmentExtra">Fragment not applied</string>

    <string name="fragment_main">Fragment to start on</string>
    <string name="author_name_txt">Mateusz</string>
    <string name="author_surname_txt">Ptak</string>

    <string name="invitation_txt">Invitation:</string>
    <string name="author_name_prompt">Name:</string>
    <string name="author_surname_prompt">Surname:</string>
    <string name="author_email_prompt">Email:</string>

    <string name="tab_layout_desc">This is tab layout</string>

    <string name="def_item_spec1">Bird</string>
    <string name="def_item_spec2">Fish</string>
    <string name="def_item_spec3">Mammal</string>
    <string name="add_item">Add animal</string>


    <string name="return_button">Return</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="show_danger">Is dangerous?</string>
    <string name="show_strength">Strength</string>
    <string name="show_spec">Here add specific info</string>

    <string name="style_small">small</string>
    <string name="style_medium">medium</string>
    <string name="style_large">large</string>
    <string name="styles_tab">Font size</string>
    <string name="additional_setting">Additional Setting</string>
    <string name="fcb">fcb</string>
    <string name="invitation_text">Text:</string>
    <string name="footballers">Footballers</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="number">Number</string>
    <string name="striker">Striker</string>
    <string name="middle_fielder">Middle fielder</string>
    <string name="defender">Defender</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="is_good">Is good?</string>
    <string name="img">img</string>
    <string name="player_name">Player name</string>
    <string name="player_position">Player position</string>
    <string name="sample_description">Sample description</string>
    <string name="position">Position</string>
    <string name="sample_number">Sample number</string>
    <string name="back">Back</string>
    <string name="list">List</string>
    <string name="main">Main</string>
    <string name="swipe">Swipe</string>
    <string name="add_player">Add player</string>
    <string name="pick">Pick</string>
    <string name="edit">Edit</string>
    <string name="placeholder_text">sample text</string>
    <string name="todo">TODO</string>


</resources>