<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="60dp"
    tools:context=".StylesFragment">

    <TextView
        android:id="@+id/styles_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/styles_tab"
        android:textSize="20sp"
        android:layout_marginBottom="15sp" />

    <RadioGroup
        android:id="@+id/styles_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/style_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/style_small" />

        <RadioButton
            android:id="@+id/style_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/style_medium" />

        <RadioButton
            android:id="@+id/style_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/style_large" />
    </RadioGroup>

    <Button
        android:id="@+id/save_button_styles_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_button" />

</LinearLayout>