<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/player_img"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/striker"
        android:contentDescription="@string/img" />

    <LinearLayout
        android:id="@+id/player_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="8sp" />

            <TextView
                android:id="@+id/player_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/surname"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/player_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player_position"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>