<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fragmentMain"
        app:layout_constraintBottom_toTopOf="@+id/main_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="392dp"
        android:contentDescription="@string/fcb"
        android:src="@drawable/fcb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:gravity="center_horizontal"
            android:text="@string/author_name_txt"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="353dp" />

        <TextView
            android:id="@+id/author_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/author_surname_txt"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="372dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>