<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FormFragment">

    <TextView
        android:id="@+id/author_txt_invit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:gravity="start"
        android:text="@string/invitation_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/invitation_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/fragmentMain"
        app:layout_constraintTop_toBottomOf="@+id/author_txt_invit"
        tools:ignore="LabelFor,RtlSymmetry"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/invitation_edit"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/author_txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15sp"
            android:gravity="center_horizontal"
            android:text="@string/author_name_prompt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/author_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/author_txt_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15sp"
            android:gravity="start"
            android:text="@string/author_surname_prompt"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/author_surname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="196dp" />

    </LinearLayout>

    <Button
        android:id="@+id/apply_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>